--- a/06_OLINK_data_PCA_plots.html
+++ b/06_OLINK_data_PCA_plots.html
@@ -2,7 +2,7 @@
 <html>
 <head><meta charset="utf-8" />
 
-<title>06_OLINK_data_PCA_plots</title>
+<title>06_CODEX_data_PCA_plots</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -13082,8 +13082,8 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="PCA-of-the-OLINK-data">PCA of the OLINK data<a class="anchor-link" href="#PCA-of-the-OLINK-data">&#182;</a></h1><p>The goal of this notebook is to represent the data of the cytokine panels measured from plasma and CSF samples using PCA.</p>
-<p>The plots obtained using marginalized data appear in Figure 3 B, and the underlying data is in supplementary table 10.</p>
+<h1 id="PCA-of-the-CODEX-data">PCA of the CODEX data<a class="anchor-link" href="#PCA-of-the-CODEX-data">&#182;</a></h1><p>The goal of this notebook is to represent the data of the cytokine panels measured from plasma and CSF samples using PCA.</p>
+<p>The plots obtained using marginalized data appear in Figure 4 B, and the underlying data is in supplementary data file 5.</p>
 
 </div>
 </div>
