--- a/07_OLINK_data_PLASMA_CSF_correlation.html
+++ b/07_OLINK_data_PLASMA_CSF_correlation.html
@@ -2,7 +2,7 @@
 <html>
 <head><meta charset="utf-8" />
 
-<title>07_OLINK_data_PLASMA_CSF_correlation</title>
+<title>07_CODEX_data_PLASMA_CSF_correlation</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -13082,8 +13082,8 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="plasma|csf-correlation-in-the-OLINK-data">plasma|csf correlation in the OLINK data<a class="anchor-link" href="#plasma|csf-correlation-in-the-OLINK-data">&#182;</a></h1><p>The goal of this notebook is to explore and represent the correlation between measurements in the plasma and CSF among the cytokine panels.</p>
-<p>The plots obtained using marginalized data appear in Figure 3 C.</p>
+<h1 id="plasma|csf-correlation-in-the-CODEX-data">plasma|csf correlation in the CODEX data<a class="anchor-link" href="#plasma|csf-correlation-in-the-CODEX-data">&#182;</a></h1><p>The goal of this notebook is to explore and represent the correlation between measurements in the plasma and CSF among the cytokine panels.</p>
+<p>The plots obtained using marginalized data appear in Supp. Figure 5.</p>
 
 </div>
 </div>
