--- a/15_immunoglobulin_data_CSF_total_Ig_boxplot.html
+++ b/15_immunoglobulin_data_CSF_total_Ig_boxplot.html
@@ -13084,7 +13084,7 @@ div#notebook {
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="total-CSF-and-plasma-Ig">total CSF and plasma Ig<a class="anchor-link" href="#total-CSF-and-plasma-Ig">&#182;</a></h1><p>Boxplots for total CSF and plasma IgG/A/M and albumin levels. 
 Blue boxes indicate the clinical reference area.</p>
-<p>This should appear as suppFig1B</p>
+<p>This should appear as suppFig1 C &amp; D</p>
 <h2 id="ToC-">ToC <a id="toc" /><a class="anchor-link" href="#ToC-">&#182;</a></h2><p><a href="#1">1. reading the data</a></p>
 <p><a href="#2">2. plotting</a></p>
 <ul>
