--- a/16_immunoglobulin_data_CSF_hMOG_NF155_boxplot.html
+++ b/16_immunoglobulin_data_CSF_hMOG_NF155_boxplot.html
@@ -13083,7 +13083,7 @@ div#notebook {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="hMOG-NF155-boxplot">hMOG NF155 boxplot<a class="anchor-link" href="#hMOG-NF155-boxplot">&#182;</a></h1><p>the goal of this notebook is to create boxplot visualizations for the Humanized MOG- (hMOG) and NF155-specific monoclonal antibodies, which were included as positive controls.</p>
-<p>This should appear as supplementary Figure 1 C.</p>
+<p>This should appear as supplementary Figure 1 A.</p>
 
 </div>
 </div>
