--- a/08_OLINK_data_CSF_plasma_ratios.html
+++ b/08_OLINK_data_CSF_plasma_ratios.html
@@ -2,7 +2,7 @@
 <html>
 <head><meta charset="utf-8" />
 
-<title>08_OLINK_data_CSF_plasma_ratios</title>
+<title>08_CODEX_data_CSF_plasma_ratios</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -13082,8 +13082,8 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="CSF/plasma-ratio-of-the-OLINK-data">CSF/plasma ratio of the OLINK data<a class="anchor-link" href="#CSF/plasma-ratio-of-the-OLINK-data">&#182;</a></h1><p>The goal of this notebook is to explore and visualize the ratio between the plasma and CSF measurements of the cytokine panels.</p>
-<p>The genrated data appear in supplementary Figure 3, as well as supplementary table 3.</p>
+<h1 id="CSF/plasma-ratio-of-the-CODEX-data">CSF/plasma ratio of the CODEX data<a class="anchor-link" href="#CSF/plasma-ratio-of-the-CODEX-data">&#182;</a></h1><p>The goal of this notebook is to explore and visualize the ratio between the plasma and CSF measurements of the cytokine panels.</p>
+<p>The genrated data appear in supplementary Figure 3, as well as Supp. Data file 3.</p>
 
 </div>
 </div>
